force-app/main/default/objects/Building__c/fields/Number_of_flats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_flats__c</fullName>
    <label>Number of flats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>