force-app/main/default/objects/Building__c/fields/Total_number_of_flats__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_flats__c</fullName>
    <label>Total number of flats</label>
    <summaryForeignKey>flat__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>