force-app/main/default/objects/Building__c/fields/Total_occupied_flats_per_building__c.field-meta.xml
<CustomField>
    <fullName>Total_occupied_flats_per_building__c</fullName>
    <label>Total occupied flats per building</label>
    <summaryFilterItems>
        <field>flat__c.Flat_status__c</field>
        <operation>equals</operation>
        <value>Full</value>
    </summaryFilterItems>
    <summaryForeignKey>flat__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>