force-app/main/default/objects/Building__c/fields/Total_revenue_generated_per_building__c.field-meta.xml
<CustomField>
    <fullName>Total_revenue_generated_per_building__c</fullName>
    <label>Total revenue generated per building</label>
    <summarizedField>flat__c.Rent__c</summarizedField>
    <summaryForeignKey>flat__c.Building__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>