force-app/main/default/objects/Building__c/validationRules/flats.validationRule-meta.xml
<ValidationRule>
    <fullName>flats</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_flats__c   &lt; Total_number_of_flats__c</errorConditionFormula>
    <errorDisplayField>Number_of_flats__c</errorDisplayField>
    <errorMessage>number of flats must be less than or equal to total number of flats</errorMessage>
</ValidationRule>